<resources>
    <string name="app_name">Air navigation tasks</string>
    <string name="calcul">Calculator</string>
    <string name="test">Test</string>
    <string name="tasks">Tasks</string>
    <string name="wind">Wind Calculation</string>
    <string name="training">Training</string>
    <string name="instructions">Instructions</string>
    <string name="statistics">Statistics</string>
    <string name="shop">Shop</string>
    <string name="shoplist">Shopping list</string>
    <string name="calculate">Calculate</string>
    <string name="constructor">Constructor</string>
    <string name="calculation">Calculated values: </string>
    <string name="calculation2">Solving Instructions are in the Instructions section.</string>
    <string name="type">Type in</string>
    <string name="exit">Exit</string>
    <string name="NL">NL-10</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <string name="Start">Start</string>
    <string name="EH">Visualization</string>
    <string name="EH_task">Tasks</string>
    <string name="DeleteTaskToast1">Task </string>
    <string name="DeleteTaskToast2"> is successfully deleted</string>
    <string name="CreateTaskList">Create task</string>
    <string name="EntryTest">Entering the Hold</string>
    <string name="leftfortask">left</string>
    <string name="rightfortask">right</string>
    <string name="condtfortask1">MC of landing = </string>
    <string name="condtfortask2">MC of flight = </string>
    <string name="condtfortask3">Circle </string>
    <string name="condtfortask4">__________________\nWhat type of entering?</string>
    <string name="toastNLFixed">The screen is locked in portrait mode</string>
    <string name="toastNLUnspeci">The screen is back in auto-rotate mode</string>
    <string name="NLflip">Flip</string>
    <string name="Visir">Visor</string>
    <string name="Orientation">Screen orientation</string>
    <string name="InstrNL"> ? </string>
    <string name="Orientationeng">Screen orientation</string>
    <string name="NLflipeng">Flip</string>
    <string name="Visireng">Visor</string>
    <string name="testLZP">Test ITL</string>
    <string name="testLZPleft">◄</string>
    <string name="testLZPright">►</string>
    <string name="testLZPon">▼</string>
    <string name="testLZPnext">Next</string>
    <string name="testLZPstart">Start</string>
    <string name="back">Back</string>
    <string name="backeng">Back</string>
    <string name="Lkrug">L</string>
    <string name="Rkrug">R</string>
    <string name="Instkrug">Instr.</string>
    <string name="Testkrug">Test</string>
    <string name="Roundkrug">Round</string>
    <string name="Ans1krug">Direct</string>
    <string name="Ans2krug">Teardrop</string>
    <string name="Ans3krug">Parallel</string>
    <string name="obnylbut">Reset Stats</string>
    <string name="getmaxlvl">Open the maximum level</string>
    <string name="throughoby">Skip</string>
    <string name="obcaga">Repeat tutorial</string>
    <string name="options">Console</string>
    <string name="generate">Generate task</string>
    <string name="condition">Condition of the task</string>
    <string name="accept">Accept answer</string>
    <string name="getPrem">Get the Calculator</string>
    <string name="typeanswer">Type answer</string>
    <string name="corranswer">-answer</string>
    <string name="typeizm_kmch">km/h</string>
    <string name="typeizm_mc">mps</string>
    <string name="typeizm_fytmin">ft/min</string>
    <string name="typeizm_km">km</string>
    <string name="typeizm_m">m</string>
    <string name="typeizm_mmile">n.miles</string>
    <string name="typeizm_s">sec</string>
    <string name="typeizm_min">min</string>
    <string name="typeizm_grad">°</string>
    <string name="typeizm_mmrtst">mmHg.</string>
    <string name="typeizm_gpa">hPa</string>
    <string name="typeizm_fyt">ft</string>
    <string name="typeizm_yzl">kt</string>
    <string name="corranswermessage"> -answer</string>
    <string name="scorecorr">Correct answers:</string>
    <string name="scorewrong">Wrong answers: </string>
    <string name="scorelvl">Your level: </string>
    <string name="scormenunow">Statistics for last session</string>
    <string name="scormenuall">Statistics for all period</string>
    <string name="scormenuallbig">Full statistics</string>
    <string name="scormenuzad">Statistics for task</string>
    <string name="scordopspos">Chance of DopSessia</string>
    <string name="scorzadcor">Correct</string>
    <string name="scorzadwro">Incorrect</string>
    <string name="scorzad">Answer</string>
    <string name="scorzad1">First step</string>
    <string name="scorzad2">Second step</string>
    <string name="scorzad3">Third step</string>
    <string name="toastNotAvail">Your level is not enough for this</string>
    <string name="toastNotAvailPrem">For access to all tasks, get premium status.</string>
    <string name="toastWrongtypeing">Imputed data is incorrect</string>
    <string name="toastPrem">Calculator is activated</string>
    <string name="toastPremdenn">Wrong password</string>
    <string name="toastPremempt">Nothing entered</string>
    <string name="toastPrembuy">Thank you for purchasing access to the calculator</string>
    <string name="toastMlvlbuy">Thank you for purchasing access to the maximum level</string>
    <string name="toastPechebuy">Thank you for purchasing ads disabling</string>
    <string name="toastDonation">Thank you for purchasing me on cookies. You are so sweet :*</string>
    <string name="toastosmtgwentwrong">Something went wrong. Try again later</string>
    <string name="toastconsumeOk">Purchase is successfully completed </string>
    <string name="fornextlvl">For next level: </string>
    <string name="toastbiglvl">You have already moved to the next level. The tasks of this level can be solved in training.</string>
    <string name="toastlvlup">Congratulations! The level is raised. You have access to new assignments.</string>
    <string name="EntPas">Console</string>
    <string name="ok">OK</string>
    <string name="About1">Your personal key: </string>
    <string name="About2">\n\nFor all your questions, you can contact the developer at this address: maximarius78@gmail.com.\nSpecify your personal key in your message.</string>
    <string name="zadopisdop">Fill in if you wish</string>
    <string name="messFirstEntCalc">A trial version of the calculator is available to you (the first three types of tasks). To access all types of tasks, purchase a premium version.</string>
    <string name="techwork">Technical work is carried out </string>
    <string name="yourmaxlvl">Your lvl is 7 </string>
    <string name="youarebest">You are the best, mate :3</string>
    <string name="entdiap">Type range</string>
    <string name="entname">Type task name</string>
    <string name="toastnoname">You did not enter a task name</string>
    <string name="toastnodiap">You did not enter a range</string>
    <string name="toastnotask">You did not make a task</string>
    <string name="toastyestask1">Congrats, the </string>
    <string name="toastyestask2"> task is created</string>
    <string name="toastNotAvailMyTask">You need a maximum level - 7, for training in your tasks</string>
    <string name="switchLang">Lang: Eng</string>
    <string name="switchThemeLight">Light</string>
    <string name="switchThemeDark">Dark</string>
    <string name="switchInstNLyes">Marked</string>
    <string name="switchInstNLno">Standard</string>
    <string name="switchInstNLyeseng">Marked</string>
    <string name="switchInstNLnoeng">Standard</string>
    <string name="TextswitchInstNLno">NL mode is: </string>
    <string name="TextswitchInstNLnoeng">NL mode is: </string>
    <string name="ZeroForStart">0</string>
    <string name="FiveForStart">5</string>
    <string name="TwelveForStart">12</string>
    <string name="HandrForLim">100</string>
    <string name="ObratForStart">180</string>
    <string name="Divider">°/</string>
    <string name="TimeCalcMen">Time Calculator</string>
    <string name="TimeCalc0">0</string>
    <string name="TimeCalc1">1</string>
    <string name="TimeCalc2">2</string>
    <string name="TimeCalc3">3</string>
    <string name="TimeCalc4">4</string>
    <string name="TimeCalc5">5</string>
    <string name="TimeCalc6">6</string>
    <string name="TimeCalc7">7</string>
    <string name="TimeCalc8">8</string>
    <string name="TimeCalc9">9</string>
    <string name="TimeCalcplus">+</string>
    <string name="TimeCalcminus">-</string>
    <string name="TimeCalcequal">=</string>
    <string name="TimeCalcclear">C</string>
    <string name="TimeCalc00_00">00:00</string>
    <string name="WindRunwayAct">Active Runway</string>
    <string name="WindRunwayOpp">Opposite Runway</string>
    <string name="WindTailwind">Tailwind</string>
    <string name="WindHeadwind">Headwind</string>
    <string name="WindXwind">X-Wind</string>
    <string name="WindRight">X-Wind from Right</string>
    <string name="WindLeft">X-Wind from Left</string>
    <string name="WindSettings">Settings</string>
    <string name="WindSetRunway">Save runway direction</string>
    <string name="WindLimX">X-wind limitation</string>
    <string name="WindLimT">Tailwind limitation</string>
    <string name="WindLimH">Headwind limitation</string>
    <string name="testLZP_ZMPY">SMTA =</string>
    <string name="testLZP_MK">MC =</string>
    <string name="testLZP_KYR">CAR =</string>
    <string name="testLZP_corr">\nCorrect</string>
    <string name="testLZP_wron">\nIncorrect\n</string>
    <string name="testLZP_answL">\nyour answer: left\n</string>
    <string name="testLZP_answR">\nyour answer: right\n</string>
    <string name="testLZP_answO">\nyour answer: on CL\n</string>
    <string name="testLZP_sec"> seconds</string>
    <string name="testLZP_zad">Task: </string>
    <string name="testLZP_of20">/20</string>
    <string name="testLZP_totalcorr">Correct answers: </string>
    <string name="testLZP_perccorr">%\nTotal time: </string>
    <string name="action_small">Small size</string>
    <string name="action_big">Big size</string>
    <string name="premium_titel">Shop</string>
    <string name="premium_pass">Access to the calculator</string>
    <string name="permanent_max_lvl">Maximum level at test</string>
    <string name="na_pecheniki">Ads disabling</string>
    <string name="donations">Cookies for the developer :3</string>
    <string name="premium_cancel">Cancel</string>
    <string name="premium_cont">Confirm</string>
    <string name="statdoprasYS">Calculate DA</string>
    <string name="statdoprasYV">Calculate WA</string>
    <string name="statdoprasUekv">Calculate Uekv</string>
    <string name="statdoprasBen">Calculate ßn</string>
    <string name="statdoprasHbar">Calculate Hbar</string>
    <string name="statdoprasdH">Calculate ▲H</string>
    <string name="statdoprastpr">Calculate t</string>
    <string name="statdoprasdH1">Calculate ▲H1</string>
    <string name="statdoprasdH2">Calculate ▲H2</string>
    <string name="statdoprasSnach">Calculate S</string>
    <string name="statdoprasdHsht">Calculate ▲H`</string>
    <string name="statdoprasSrasp">Calculate Shad</string>
    <string name="statdoprasdVsh">Calculate ▲Vcompr</string>
    <string name="statdoprasVprisp">Calculate Vinst.corr.</string>
    <string name="statdoprasVprispKYS">Calculate Vinst.CSI.corr</string>
    <string name="statdoprasDP">Calculate AA</string>
    <string name="statdoprasLBY">Calculate LLD</string>
    <string name="statdoprasBY">Calculate LD</string>
    <string name="answdoprasYS">Enter DA</string>
    <string name="answdoprasYV">Enter WA</string>
    <string name="answdoprasUekv">Enter Uequi</string>
    <string name="ContDescr_ads">Advertisement banner</string>
    <string name="ContDescr_TasksMenu">Tasks menu</string>
    <string name="ContDescr_Minus">Minus</string>
    <string name="ContDescr_Plus">Plus</string>
</resources>